--- a/index.adoc
+++ b/index.adoc
@@ -16,6 +16,7 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 [.anns]
 
 * Next assignment is Due Sept 13th. link:assts/asst02.html[Assignment 02: Learn to C]
+* Lab Activity: link:studyguide01.html[Study Guide for Quiz 1]
 
 == Course Info
 
