--- a/assts/asst03.adoc
+++ b/assts/asst03.adoc
@@ -8,7 +8,7 @@ include::header.adoc[]
 
 = {title}
 
-//**Due Wednesday, February 8th, before midnight**
+**Due Friday, September 20th, before midnight**
 
 The goals for this assignment are:
 
