--- a/index.adoc
+++ b/index.adoc
@@ -15,8 +15,8 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Next assignment is Due Sept 13th. link:assts/asst02.html[Assignment 02: Learn to C]
-* Lab Activity: link:studyguide1.html[Study Guide for Quiz 1]
+* Next assignment is Due Sept 20th. link:assts/asst03.html[Assignment 03: If you malloc something, set it free]
+* Lab Quiz 1: link:studyguide1.html[Study Guide for Quiz 1]
 
 == Course Info
 
