--- a/schedule.adoc
+++ b/schedule.adoc
@@ -51,7 +51,7 @@
 //-----------------------------
 |5
 |Oct 1,3 anchor:week05[]
-|*Binary and Data Representation I* 
+|*Binary and Data Representation* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
 * link:assts/asst05.html[Assignment 05]: Due Oct 3
@@ -60,10 +60,11 @@
 //-----------------------------
 |6
 |Oct 8, 10 anchor:week06[]
-|*Binary and Data Representation II, Intro to Assembly* 
+|*Assembly* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
 * Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
+* Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
 * link:assts/asst06.html[Assignment 06]: Due Oct 10
 * Lab Oct 10: Practice Quiz 03, link:studyguide3.html[Study Guide 3]
 
@@ -77,45 +78,44 @@
 //-----------------------------
 |8
 |Oct 22, 24 anchor:week07[]
-|*Assembly* 
+|*The operating system, Processes* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst07.html[Assignment 07]: Due Oct 24
+* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
+* link:assts/asst07.html[Assignment 07]: Due Oct 24 **Hardcopy due at Park 200B**
 * Lab Oct 24: **Quiz 03**
 
 //-----------------------------
 |9
 |Oct 29,31 anchor:week09[]
-|*The operating system, Processes* 
+|*Threads I* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
-* link:assts/asst08.html[Assignment 08]: Due Oct 31 **Hardcopy due at Park 200B**
+* Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
+* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* link:assts/asst08.html[Assignment 08]: Due Oct 31 
 * Lab: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
 
 //-----------------------------
 |10
 |Nov 5, 7 anchor:week10[]
-|*Threads I* 
+|*Threads II* 
 
+* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
 * Nov 5: NO CLASS. ELECTION Day
-* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13.4-13.6] 
-* Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
 * link:assts/TODO.html[Assignment 09]: Due Nov 7
 * Lab:  **Quiz 04**
 
 //-----------------------------
 |11
 |Nov 12, 14 anchor:week11[]
-|*Threads II* 
+|*Threads III* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
 * link:assts/TODO.html[Assignment 10]: Due Nov 14th
 * Lab: Quiz Practice, link:studyguide5.html[Study Guide 5]
 
 //-----------------------------
 |12
 |Nov 19,21 anchor:week12[]
-|*Threads III* 
+|*Threads IV* 
 
 * Nov 21, NO CLASS
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
@@ -125,17 +125,17 @@
 //-----------------------------
 |13
 |Nov 26 anchor:week13[]
-|*Threads IV* 
+|*Code optimization* 
 
+* Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
 * Nov 28: Thanksgiving, NO CLASS
 
 //-----------------------------
 |14
 |Dec 3,5 anchor:week14[]
-|*Memory, Code optimization* 
+|*Memory* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy[Chapter 11.1-11.3] 
-* Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
 * link:assts/asst12.html[Assignment 12]: Due Dec 5
 * Lab Dec 5, Final Practice, link:studyguide-final.html[Final Study Guide]
 
