--- a/assts/asst11.adoc
+++ b/assts/asst11.adoc
@@ -9,7 +9,7 @@ include::header.adoc[]
 
 = {title}
 
-//*Due Wednesday, April 12th, before midnight*
+*Due Friday, November 22nd, before midnight*
 
 The goals for this assignment are:
 
@@ -199,3 +199,31 @@ $ git status
 $ git push
 $ git status
 ----
+
+
+= Grading Rubric
+
+*Assignment rubrics*
+
+Grades are out of 4 points.
+
+* (2 points) Mandelbrot
+** (0.1 points) style and header comment
+** (0.4 points) 
+** (0.5 points) no memory errors
+* (2 points) Threaded Mandelbrot
+** (0.1 points) style and header comment
+** (1.4 points) 
+** (1.5 points) no memory errors
+
+*Code rubrics*
+
+For full credit, your C programs must be feature-complete, robust (e.g. run without memory errors or crashing) and 
+have good style.
+
+* Some credit lost for missing features or bugs, depending on severity of error
+* -5% for style errors. See the link:../codingstandard.html[class coding style] here.
+* -50% for memory errors
+* -100% for failure to checkin work to Github
+* -100% for failure to compile on linux using make
+
