--- a/schedule.adoc
+++ b/schedule.adoc
@@ -25,7 +25,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * link:https://pythontutor.com/c.html#mode=edit[C Tutor]
 * Lab Sept 12: Quiz 01 practice, link:studyguide1.html[Study Guide: Quiz 01]
-* link:assts/asst02.html[Assignment 02]: Sept 12
+* link:assts/asst02.html[Assignment 02]: Sept 13
 
 //-----------------------------
 |3
@@ -35,7 +35,7 @@
 * Topics: Heap, dynamically-allocated memory (malloc, free), More arrays
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * Lab Sept 19: **Quiz 01** 
-* link:assts/asst03.html[Assignment 03]: Due September 19
+* link:assts/asst03.html[Assignment 03]: Due September 20
 
 //-----------------------------
 |4
@@ -46,7 +46,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_c_debugging_tools[Sections 3.1-3.3] 
 * Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
 * Sept 26 Lab: Quiz 02 Practice, link:studyguide2.html[Study Guide: Quiz 02]
-* link:assts/asst04.html[Assignment 04]: Due September 26
+* link:assts/asst04.html[Assignment 04]: Due September 27
 
 //-----------------------------
 |5
@@ -54,7 +54,7 @@
 |*Binary and Data Representation* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
-* link:assts/asst05.html[Assignment 05]: Due Oct 3
+* link:assts/asst05.html[Assignment 05]: Due Oct 4
 * Lab Oct 3:  **Quiz 02**
 
 //-----------------------------
@@ -65,7 +65,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
 * Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
 * Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst06.html[Assignment 06]: Due Oct 10
+* link:assts/asst06.html[Assignment 06]: Due Oct 11
 * Lab Oct 10: Practice Quiz 03, link:studyguide3.html[Study Guide 3]
 
 //-----------------------------
@@ -81,7 +81,7 @@
 |*The operating system, Processes* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
-* link:assts/asst07.html[Assignment 07]: Due Oct 24 **Hardcopy due at Park 200B**
+* link:assts/asst07.html[Assignment 07]: Due Oct 25 **Hardcopy due at Park 200B**
 * Lab Oct 24: **Quiz 03**
 
 //-----------------------------
@@ -91,7 +91,7 @@
 
 * Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst08.html[Assignment 08]: Due Oct 31 
+* link:assts/asst08.html[Assignment 08]: Due Nov 1 
 * Lab: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
 
 //-----------------------------
@@ -101,15 +101,15 @@
 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
 * Nov 5: NO CLASS. ELECTION Day
-* link:assts/TODO.html[Assignment 09]: Due Nov 7
-* Lab:  **Quiz 04**
+* link:assts/asst09.html[Assignment 09]: Due Nov 8
+* Lab: **Quiz 04**
 
 //-----------------------------
 |11
 |Nov 12, 14 anchor:week11[]
 |*Threads III* 
 
-* link:assts/TODO.html[Assignment 10]: Due Nov 14th
+* link:assts/asst10.html[Assignment 10]: Due Nov 14th
 * Lab: Quiz Practice, link:studyguide5.html[Study Guide 5]
 
 //-----------------------------
@@ -119,15 +119,15 @@
 
 * Nov 21, NO CLASS
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/TODO.html[Assignment 11]: Due Nov 21
+* link:assts/asst11.html[Assignment 11]: Due Nov 21
 * Lab: **Quiz 05**
 
 //-----------------------------
 |13
 |Nov 26 anchor:week13[]
-|*Code optimization* 
+|*Malloc* 
 
-* Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
+* Read:"My malloc: mylloc and mhysa" by Johan Montelius 
 * Nov 28: Thanksgiving, NO CLASS
 
 //-----------------------------
@@ -142,8 +142,9 @@
 //-----------------------------
 |15
 |Dec 10,12 anchor:week15[]
-|*C++* 
+|*Code Optimization, C++* 
 
+* Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
 * Lab Dec 5, Final Practice, link:studyguide-final.html[Final Study Guide]
 
 |===
