--- a/assts/asst11.adoc
+++ b/assts/asst11.adoc
@@ -168,7 +168,7 @@ image:buddhabrot-2000-1650142988.png[height=400]
 
 Requirements and hints:
 
-* You can re-use your PPM and mandelbrot functions from A09. You should re-use your implementation for read/write PPM as well.
+* You can re-use your PPM and mandelbrot functions from A10. You should re-use your implementation for read/write PPM as well.
 * Each thread should run all three steps on a quadrant of the image. 
 * You will need a `pthread_barrier_t` to wait for all counts to be computed before computing the colors
 * Notice that the range of x and y might need to be larger to see the probability distribution
@@ -200,21 +200,17 @@ $ git push
 $ git status
 ----
 
-
 = Grading Rubric
 
 *Assignment rubrics*
 
 Grades are out of 4 points.
 
-* (2 points) Mandelbrot
-** (0.1 points) style and header comment
-** (0.4 points) 
-** (0.5 points) no memory errors
-* (2 points) Threaded Mandelbrot
-** (0.1 points) style and header comment
-** (1.4 points) 
-** (1.5 points) no memory errors
+* (4 points) Threaded Buddhabrot
+** (0.4 points) style and header comment
+** (0.4 points) Generated image with correct filename
+** (1.2 points) Correct output, thread coordination, and output performance statistics
+** (2.0 points) no memory errors
 
 *Code rubrics*
 
