--- a/assts/asst11.adoc
+++ b/assts/asst11.adoc
@@ -209,7 +209,8 @@ Grades are out of 4 points.
 * (4 points) Threaded Buddhabrot
 ** (0.4 points) style and header comment
 ** (0.4 points) Generated image with correct filename
-** (1.2 points) Correct output, thread coordination, and output performance statistics
+** (0.2 points) Supports given command line arguments
+** (1.0 points) Correct output, thread coordination, and output performance statistics
 ** (2.0 points) no memory errors
 
 *Code rubrics*
