--- a/assts/asst08.adoc
+++ b/assts/asst08.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 9: Many processes make light work
+:title: Assignment 9: Personal Shell
 :Author Initials: ASN
 :Date:    2020-08-15
 :Revision: 0.1
@@ -13,8 +13,9 @@ include::header.adoc[]
 
 The goals for this assignment are:
 
-* Implement an algorithm using multiple processes with fork()
-* Implement your own simple shell program
+* Gain experience working with `fork()`.
+* Use OS system calls in your C program. 
+* Implement your own simple shell program.
 
 [discrete]
 == Update your repository
@@ -64,10 +65,23 @@ Requirements:
 
 In the file, `shell.c`, implement a program that implements a simple shell. 
 
+image::RainbowShell.png[width=640px]
+
 Requirements:
 
-* TODO
-* todo
+* Your program should print a prompt. At minimum, your prompt should show the current working directory and look distinct from the lab machine prompts. In other words, it should be easy to tell what shell if running from the terminal.
+* Use the `readline()` function to get user input. This function supports backspace, tab completion, and more. link:https://www.man7.org/linux/man-pages/man3/readline.3.html[Documentation for readline can be found here].
+* Use the `add_history()` function to save user history. This will allow arrow keys to work. link:https://www.man7.org/linux/man-pages/man3/readline.3.html[Documentation for readline can be found here].
+* Your program should quit if the users types `exit`.
+* When the user gives a command, split it into a command and arguments and then fork a command to execute it. 
+* Your terminal should wait for the command to finish. If the command terminates with an error, report the error.
+
+NOTE: You can print with colors to the console using ANSI escape sequences. 
+For example, `printf(\x1b[32m "Green Text" \x1b[0m);` will print green text. link:https://azrael.digipen.edu/~mmead/www/mg/ansicolors/index.html[Here is a good guide!]
+
+NOTE: Most prompts print helpful information. Above, we use the 
+system commands `gethostname`, `getcwd`, and `getpwuid(geteuid())` to get the 
+machine name, the current working directory, and current user respectively. 
 
 = Submit your work
 
@@ -92,12 +106,34 @@ Grades are out of 4 points.
 
 * (1 points) Warmup
 ** (0.1 points) style and header comment
-** (0.4 points) prints correct messages, uses fork() and getpid()
+** (0.4 points) prints correct messages, uses `fork()` and `getpid()`
 ** (0.5 points) no memory errors
 * (3 points) Simple shell 
 ** (0.1 points) style and header comment
-** (1.4 points) 
-** (1.5 points) no memory errors
+** (1.4 points) Displays unique prompt with current working directory
+** Uses `readline()` and `add_history()`
+** Quits when the user types `exit`.
+** Forks a process to run the user's command. 
+** Reports the return status of the command when the child process completes.
+** Has a unique prompt appearance
+** (1.5 points) no memory errors. 
+
+NOTE: When using `readline()`, valgrind will report that some of your memory is
+_still reachable_. This memory is not leaked. It hasn't been cleaned up yet from 
+`readline()`'s internal memory. For example, output such as the following is ok
+[code]
+----
+==3504== HEAP SUMMARY:
+==3504==     in use at exit: 204,143 bytes in 221 blocks
+==3504==   total heap usage: 453 allocs, 232 frees, 244,790 bytes allocated
+==3504==
+==3504== LEAK SUMMARY:
+==3504==    definitely lost: 0 bytes in 0 blocks
+==3504==    indirectly lost: 0 bytes in 0 blocks
+==3504==      possibly lost: 0 bytes in 0 blocks
+==3504==    still reachable: 204,143 bytes in 221 blocks
+==3504==         suppressed: 0 bytes in 0 blocks
+---- 
 
 *Code rubrics*
 
