--- a/assts/asst11.adoc
+++ b/assts/asst11.adoc
@@ -126,7 +126,28 @@ link:../index.html[course webpage for a link].
 
 [code]
 ----
-
+$ **make ./tree_tests**
+gcc -g -Wall -Wvla -Werror -Wno-unused-variable -Wno-unused-but-set-variable tree_tests.c tree.c -o tree_tests -lpthread
+$ **./tree_tests** 
+Running tests...
+test 1: insert for empty tree: PASSED
+test 2: name set correctly: PASSED
+test 3: left is null: PASSED
+test 4: right is null: PASSED
+test 5: name set correctly: PASSED
+test 6: right is null: PASSED
+test 7: name set correctly: PASSED
+test 8: item not in tree: PASSED
+test 9: item in tree: PASSED
+test 10: found correct object: PASSED
+M
+ l:A
+ r:X
+  l:P
+A
+M
+P
+X
 ----
 
 Requirements:
@@ -137,20 +158,77 @@ Requirements:
 == Dependencies
 
 A _dependency_ is a general software term for any software required by another. In this question, 
-we will analyze dependencies between files, as determined by `#include` statements. For example, 
-the file "Animal.h" depends on "string.h". We can represent such dependencies using a graph, where 
-nodes represent files and directed edges represent dependencies. With this representation, a node 
-with no outgoing edges has no dependencies.  
+we will store files in a binary search tree so we can list their file dependencies, 
+as determined by `#include` statements. For example, 
+the file "Animal.h" depends on "Locomotion.h". 
+
+//We can represent such dependencies using a graph, where 
+//nodes represent files and directed edges represent dependencies. With this representation, a node 
+//with no outgoing edges has no dependencies.  
 
 In the file, `dependency.c`, implement a program that uses N threads to build a binary search tree of a 
-given set of files. The nodes of the binary search tree should also contain a list of dependencies that 
-point to other nodes in the tree. This data structure should make it easy to look up a file by name and 
-then trace through the dependencies between files.
+given set of files. After building the tree, the program should give the user a prompt where they 
+can list the processed files in alphabetical order and then query the dependencies of the file by 
+giving the filename.  
 
+//The nodes of the binary search tree should also contain a list of dependencies that 
+//point to other nodes in the tree. This data structure should make it easy to look up a file by name and 
+//then trace through the dependencies between files.
+
+[code, subs="quotes"]
+----
+$ **./dependency 3 `find code -name "*.h" -o -name "*.cpp"`**
+Processing 11 files
+Thread 0 processing 4 files (arguments 2 to 6)
+Thread 1 processing 4 files (arguments 6 to 10)
+Thread 2 processing 3 files (arguments 10 to 13)
+Elapsed time is 0.000496
+$ list
+code/Animal.h
+code/Bird.h
+code/Duck.h
+code/Fish.h
+code/Fly.h
+code/Locomotion.h
+code/Seal.h
+code/Swim.h
+code/Walk.h
+code/Whale.h
+code/Zoo.cpp
+$ code/Animal.cpp
+code/Animal.cpp not found
+$ code/Animal.h
+code/Animal.h has the following dependencies
+  string
+  vector
+  Locomotion.h
+$ code/Zoo.cpp
+code/Zoo.cpp has the following dependencies
+  Animal.h
+  Bird.h
+  Duck.h
+  Fish.h
+  Seal.h
+  Whale.h
+  Locomotion.h
+  Walk.h
+  Fly.h
+  Swim.h
+$ apple
+apple not found
+$ quit
+----
 
 Requirements:
 
-* Use a mutex to avoid race conditions when setting up the tree and graph data structures
+* Check that a file is valid before adding it to the tree
+* Support the commands: quit, list, <filename>
+* Use a mutex to avoid race conditions when setting up the tree
+* Your program should take the number of threads and a list of files as command line arguments
+* Subdivide the files among the N threads. Note that the number of files may not divide evenly between threads.
+* Use a mutex to ensure that threads do not have a race conditions when constructing the tree
+* Use `strstr` and `fgets` to parse the source file and find lines containing `#include`
+* Strip the filenames from the `#include` lines when printing dependencies.
 
 = Submit your work
 
@@ -176,17 +254,21 @@ $ git status
 
 Grades are out of 4 points.
 
-* (1 points) Grep
+* (1.5 points) Grep
+** (0.15 points) style and header comment
+** (0.1 points) Correct command line arguments: number of threads, keyword, and a list of files
+** (0.2 points) Subdivide the files among the N threads
+** (0.3 points) Correct output, uses mutex
+** (0.75 points) no memory errors
+* (1.5 points) Tree
+** (0.15 points) style and header comment
+** (0.6 points) implements all functions, passes all tests and does not modify basecode
+** (0.75 points) no memory errors
+* (1 points) Dependency
 ** (0.1 points) style and header comment
-** (0.4 points) 
-** (0.5 points) no memory errors
-* (1 points) Tree
-** (0.1 points) style and header comment
-** (0.9 points) 
-** (1 points) no memory errors
-* (2 points) Dependencies
-** (0.1 points) style and header comment
-** (0.4 points) 
+** (0.1 points) Correct command line arguments: number of threads, keyword, and a list of files
+** (0.1 points) Subdivide the files among the N threads, builds tree using multiple threads using mutex
+** (0.2 points) Correct behavior
 ** (0.5 points) no memory errors
 
 *Code rubrics*
