--- a/schedule.adoc
+++ b/schedule.adoc
@@ -119,7 +119,7 @@
 
 * Nov 21, NO CLASS
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst11.html[Assignment 11]: Due Nov 21
+* link:assts/asst11.html[Assignment 11]: Due Dec 1 (No extensions)
 * Lab: **Quiz 05**
 
 //-----------------------------
