--- a/assts/asst09.adoc
+++ b/assts/asst09.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 9: Mandelbrot Set
+:title: Assignment 9: Mandelthreads
 :Author Initials: ASN
 :Date:    2020-08-15
 :Revision: 0.1
