--- a/assts/asst11.adoc
+++ b/assts/asst11.adoc
@@ -120,7 +120,8 @@ threads.
 == Tree
 
 In the file, `tree.c`, implement a binary search tree. Do not change the header
-`tree.h`, nor the function declarations in `tree.c`. We recommend using the book
+`tree.h`, nor the function declarations in `tree.c`. But you can add functions to `tree.c`! 
+We recommend using the book
 "Data Structures and Algorithm Analysis in C" by Mark Allen Weiss. See the
 link:../index.html[course webpage for a link].
 
@@ -152,7 +153,7 @@ X
 
 Requirements:
 
-* You must not modify the basecode for `tree.h` or `tree.c`
+* You must not modify the basecode for `tree.h` or `tree.c`, except to add functions to `tree.c`
 * Your output should match the above and pass all tests
 
 == Dependencies
