--- a/assts/asst08.adoc
+++ b/assts/asst08.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 9: Personal Shell
+:title: Assignment 8: Trust the Process
 :Author Initials: ASN
 :Date:    2020-08-15
 :Revision: 0.1
@@ -61,7 +61,7 @@ Requirements:
 * Your program should use fork() to spawn processes.
 * Call `getpid()` to show the process ids for each print message.
 
-= Simple Shell
+= Personal Shell
 
 In the file, `shell.c`, implement a program that implements a simple shell. 
 
