--- a/index.adoc
+++ b/index.adoc
@@ -15,7 +15,7 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Next assignment is Due Nov 1st. link:assts/asst08.html[Assignment 08: Trust the Process]
+* Next assignment is Due Nov 8st. link:assts/asst09.html[Assignment 09: Mandelthreads]
 * *Quiz 04* Nov 7: link:studyguide4.html[Study Guide for Quiz 4]
 * Our final exam will be **self-scheduled** during the period Dec 15-20, 2024.
 
