--- a/studyguide5.adoc
+++ b/studyguide5.adoc
@@ -7,43 +7,48 @@ include::header.adoc[]
 
 = {title}
 
-Code Jams are open book. 40 minutes in lab.
+Quizzes are closed book. 30 minutes in lab.
 
 Topics:
 
 Everything from link:studyguide4.html[Study Guide 4], plus
 
 //* Compiling and linking
-* The operating system, interrupts, traps, processes, virtual memory, zombies
+* The operating system, processes, signals, virtual memory
 * fork(), wait(), pid, ps
-* Interprocess communication: signals, shared memory, pipes, sockets
-* POSIX threads
-* mutex, barrier
-* deadlock, thread safety
-
-NOTE: We skipped signals this semester (Spring 2023). You do not need to study this topic
+* Basic POSIX threads
 
 = Practice questions
 
-
 == OS, Processes
 
-1) Short answer
+1) Example short answer questions
 
 * What is the operating system?
 * What is the BIOS or UEFI for?
-* What is virtual address space (VAS)? Why is it useful?
+* What is virtual address space (VAS)? 
+* Why do we need a virtual address space (VAS)? 
+* Why might a processed be in a blocked state?
 * What is a process? 
 * What is the difference between an interrupt and a trap?
 * Why do we need interrupts and traps?
 * Why do we need special mechanisms, such as pipes or sockets, to communicate between processes?
 * How can you kill a process using `ps` ?
-* What states can a process be in?
 * What is a zombie process?
 * What are the different states that a process can be in?
-* Why might we want to register a signal handler for the SIGKILL or SIGSEGV signal?
+* What is a signal handler?
+* Why might we want to register a signal handler?
 * When does the OS send the SIGSEGV signal?
-* What are the differences between shared memory, signals and pipes?
+* When does the OS send the SIGINT signal?
+* When does the OS send the SIGCHD signal?
+//* What are the differences between shared memory, signals and pipes?
+* What happens when a process calls fork?
+* What is a thread?
+* What are the differences between threads and processes?
+* Why and when might we want to use multiple threads?
+* When might we want to use multiple processes versus multiple threads?
+* What is a function pointer?
+* What is a void* pointer?
 
 2) The following program creates a zombie process. Why?
 
@@ -61,7 +66,7 @@ void main() {
 }
 ----
 
-3) Draw the process hierarchy created by executing the following program. For each process in the hierarchy, list its output (e.g. what does each process print)?
+3) Draw the process timeline created by executing the following program. For each created process, list its output (e.g. what does each process print)?
 
 [source]
 ----
@@ -91,150 +96,199 @@ int main() {
 }
 ----
 
-4) What type of event does SIGINT represent? Write a program that registers a signal handler for SIGINT?
+4) Draw the process timeline created by executing the following program. For each created process, list its output (e.g. what does each process print)? How many processes are created?
+
+[source]
+----
+int main() {
+  pid_t ret;
+
+  printf("A\n");
+
+  for (int i = 0; i < 3; i++)
+  {
+     ret = fork();
+     if (ret == 0) // child
+     {
+        printf("B%d\n", i); 
+     }
+  }
+
+  printf("Z\n");
+  return 0;
+}
+----
+
+//4) What type of event does SIGINT represent? Sketch a program that registers a signal handler for SIGINT?
+
+5) Draw the process timeline created by executing the following program. For each created process, list its output (e.g. what does each process print)? How many processes are created?
+
+[source]
+----
+int main() {
+  pid_t ret;
+
+  printf("A\n");
+
+  for (int i = 0; i < 3; i++)
+  {
+     ret = fork();
+     if (ret == 0) // child
+     {
+        printf("B%d\n", i); 
+        exit(0);
+     }
+  }
+
+  printf("Z\n");
+  return 0;
+}
+----
+
+6) Draw the process timeline created by executing the following program. For each created process, list its output (e.g. what does each process print)? How many processes are created?
+
+[source]
+----
+int main() {
+  pid_t ret;
+
+  int value = 10;
+  printf("A%d\n", value);
+
+  ret = fork();
+  if (ret == 0) // child
+  {
+     value--;
+  }
+  else
+  {
+     value++;
+  }
+
+  printf("Z%d\n", value);
+  return 0;
+}
+----
 
 = Threads
 
-Short answer
+//* What is a mutex? When do we need to use mutex?
+//* What is a race condition?
+//* What is deadlock?
+//* What does it mean for a function to be thread safe?
 
-* What is a thread?
-* What is a mutex? When do we need to use mutex?
-* What is a race condition?
-* What is deadlock?
-* What does it mean for a function to be thread safe?
-* Why and when might we want to use multiple threads?
-* When might we want to use multiple processes versus multiple threads?
+1) Sketch a multi-threaded program (N threads) that computes the average of a list of numbers. You can assume that the size of the list can be evenly divided by N. 
 
-1) Write a multi-threaded program (2 threads) that computes the average of a list of numbers. You can assume that the size of the list can be evenly divided by 2. Sketch a stack diagram for this program using a list of 4 numbers.
-
-2) The following multi-threaded program simulates two bank accounts. But it's not working correctly. What is going on and how can we fix it?
+2) Draw the stack diagram for the following program with two threads.
 
 [source]
 ----
-struct account {
-  pthread_mutex_t lock;
-  int balance;
+struct thread_data {
+  float s;
+  int start_index;
+  int end_index;
+  float* array;
 };
 
-void *Transfer(void *args){
-  struct account** accounts = (struct account**) args;
-  struct account* fromAcct = accounts[FROM];
-  struct account* toAcct = accounts[TO];
+void *scalar_multiply(void *userdata) {
+  struct thread_data *data = (struct thread_data *) userdata;
+  for (int i = data->start_index; i < data->end_index; i++) {
+    data->array[i] = sqrt(i)* data->s;
+  }
+  return NULL; 
+}
 
-  for (int i = 0; i < 10000; i++) {
-    pthread_mutex_lock(&fromAcct->lock);
-    pthread_mutex_lock(&toAcct->lock);
+int main(int argc, char **argv) {
+  int i;
+  int nthreads; 
+  pthread_t *thread_array; 
+  long *thread_ids;
+  struct thread_data *tdata;
+  float data[100000];
 
-    fromAcct->balance -= 25;
-    toAcct->balance += 25;
+  if (argc !=2) {
+    fprintf(stderr, "usage: %s <n>\n", argv[0]);
+    fprintf(stderr, "where <n> is the number of threads\n");
+    return 1;
+  }
+  nthreads = strtol(argv[1], NULL, 10);
 
-    pthread_mutex_unlock(&fromAcct->lock);
-    pthread_mutex_unlock(&toAcct->lock);
+  // Allocate space for thread structs and identifiers.
+  thread_array = malloc(nthreads * sizeof(pthread_t));
+  thread_ids = malloc(nthreads * sizeof(long));
+  tdata = malloc(nthreads * sizeof(struct thread_data));
+
+  struct timeval tstart, tend;
+  gettimeofday(&tstart, NULL);
+  // Assign each thread an ID and create all the threads.
+  int subsize = (int) (100000 / (nthreads-1));
+  for (i = 0; i < nthreads; i++) {
+    thread_ids[i] = i;
+    tdata[i].s = 3.14;
+    tdata[i].start_index = i*subsize;
+    tdata[i].end_index = (i+1)*subsize % 100000;
+    tdata[i].array = data;
+    pthread_create(&thread_array[i], NULL, scalar_multiply, &tdata[i]);
   }
 
+  /* Join all the threads. Main will pause in this loop until all threads
+   * have returned from the thread function. */
+  for (i = 0; i < nthreads; i++) {
+    pthread_join(thread_array[i], NULL);
+  }
+  gettimeofday(&tend, NULL);
+
+  float timer = tend.tv_sec - tstart.tv_sec + (tend.tv_usec - tstart.tv_usec)/1.e6;
+  printf("scalar_multiply time is %g\n", timer);
+
+  free(thread_array);
+  free(thread_ids);
+  free(tdata);
+
+  return 0;
+}
+----
+
+3) Draw the stack diagram for the following program with two threads.
+
+[source]
+----
+struct foo {
+   long id;
+   char message[16];
+};
+
+void *HelloWorld(void *id) {
+  struct foo *holder = (struct foo *) id;
+  printf("%s world! I am thread %ld\n", holder->message, holder->id);
   return NULL;
 }
 
-int main() {
+int main(int argc, char **argv) {
+  struct foo holder1, holder2;
+  holder1.id = 1;
+  strcpy(holder1.message, "caio");
+  
+  holder2.id = 2;
+  strcpy(holder2.message, "aloha");
 
-  // create accounts for A and B
-  struct account accountA;
-  struct account accountB;
-  accountA.balance = 100;
-  accountB.balance = 50;
-  pthread_mutex_init(&accountA.lock, NULL);
-  pthread_mutex_init(&accountB.lock, NULL);
-  printf("Starting balances:\n");
-  printf("\tA: %d\n", accountA.balance);
-  printf("\tB: %d\n", accountB.balance);
-
-  // create threads
-  struct account* transformA2B[2];
-  transformA2B[0] = &accountA;
-  transformA2B[1] = &accountB;
-
-  struct account* transformB2A[2];
-  transformB2A[0] = &accountB;
-  transformB2A[1] = &accountA;
-
-  pthread_t A2B, B2A;
-  pthread_create(&A2B, NULL, Transfer, &transformA2B);
-  pthread_create(&B2A, NULL, Transfer, &transformB2A);
-
-  // wait for threads to finish
-  pthread_join(A2B, NULL);
-  pthread_join(B2A, NULL);
-
-  printf("Ending balances:\n");
-  printf("\tA: %d\n", accountA.balance);
-  printf("\tB: %d\n", accountB.balance);
-
-  // cleanup
-  pthread_mutex_destroy(&accountA.lock);
-  pthread_mutex_destroy(&accountB.lock);
-
+  long* retval1 = NULL, *retval2 = NULL;
+  pthread_t thread1, thread2;
+  pthread_create(&thread1, NULL, HelloWorld, &holder1);
+  pthread_create(&thread2, NULL, HelloWorld, &holder2);
+  pthread_join(thread1, NULL);
+  pthread_join(thread2, NULL);
   return 0;
 }
 ----
 
-3) The following multi-threaded program attempts to count the numbers in a list that are greater than 1000 but isn't working correctly. What is going on and how can we fix it?
-
+4) Draw the stack diagram for the following program with four threads.
 
 [source]
 ----
-#define SIZE 100000
-
-static unsigned long long count = 0;
-struct thread_data {
-  int start_index;
-  int end_index;
-  int* array;
-};
-
-void *countOver1000(void *userdata) {
-  struct thread_data *data = (struct thread_data *) userdata;
-
-  for (int i = data->start_index; i < data->end_index; i++) {
-    if (data->array[i] > 1000) {
-      count++;
-    }
-  }
-  return (void*) NULL;
-}
-
-int main(int argc, char *argv[]) {
-  srand(time(0));
-
-  int values[SIZE];
-  unsigned long long test = 0;
-  for (int i = 0; i < SIZE; i++) {
-    values[i] = rand() % SIZE;
-    if (values[i] > 1000) test++;
-  }
-
-  printf("Test with 4 threads\n");
-  pthread_t threads[4];
-  struct thread_data data[4];
-  int subsize = SIZE/4; // assume multiple of 4
-  for (int i = 0; i < 4; i++) {
-    data[i].array = values;
-    data[i].start_index = subsize*i;
-    data[i].end_index = subsize*(i+1);
-    pthread_create(&threads[i], NULL, countOver1000, (void*) &data[i]);
-  }
-
-  for (int i = 0; i < 4; i++) {
-    pthread_join(threads[i], NULL);
-  }
-
-  printf("Answer with threads: %llu\n", count);
-  printf("Correct answer: %llu\n", test);
-
-  return 0;
-}
 ----
 
-4) Ann-marie has the following errors when she tries to build. What type of error is it (compile, link, runtime, or logical)? How can she fix it?
+5) Ann-marie has the following errors when she tries to build. What type of error is it (compile, link, runtime, or logical)? How can she fix it?
 
 [source]
 ----
@@ -254,4 +308,56 @@ thread-argv.c:105:7: warning: implicit declaration of function ‘pthread_attr_d
 thread-argv.c:112:9: warning: implicit declaration of function ‘pthread_join’ [-Wimplicit-function-declaration]
   112 |     s = pthread_join(tinfo[tnum].thread_id, &res);
       |         ^~~~~~~~~~~~
+----
+
+5) What is the output of the following program? Draw the stack diagram.
+
+[source]
+----
+#include <stdio.h>
+
+typedef void (*functionType)(int a, int b);
+
+void example(int a, int b) {
+  printf("This is a function stored as data! %d %d\n", a, b);
+}
+
+int main() {
+  functionType myFunction = example;
+  (*myFunction)(10, 3);
+}
+----
+
+6) Indicate which of the following dereferences are safe.
+
+[source]
+----
+#include <stdio.h>
+
+int main()
+{
+  void* generic = NULL;
+  int a = 3;
+  double b = 4.5;
+  generic = &a;
+  generic = &b;
+
+  printf("test %f\n", *generic); 
+
+  double* double_ptr = (double *) generic;
+  printf("test %f\n", *double_ptr); 
+
+  double* int_ptr = (int *) generic;
+  printf("test %d\n", *int_ptr); 
+
+  generic = &a;
+
+  double* double_ptr = (double *) generic;
+  printf("test %f\n", *double_ptr); 
+
+  double* int_ptr = (int *) generic;
+  printf("test %d\n", *int_ptr); 
+
+  return 0;
+}
 ----
