--- a/studyguide5.adoc
+++ b/studyguide5.adoc
@@ -20,7 +20,7 @@ Everything from link:studyguide4.html[Study Guide 4], plus
 
 = Practice questions
 
-== OS, Processes
+== OS, Processes, Threads
 
 1) Example short answer questions
 
@@ -179,6 +179,9 @@ int main() {
 
 1) Sketch a multi-threaded program (N threads) that computes the average of a list of numbers. You can assume that the size of the list can be evenly divided by N. 
 
+
+
+
 2) Draw the stack diagram for the following program with two threads.
 
 [source]
@@ -221,12 +224,12 @@ int main(int argc, char **argv) {
   struct timeval tstart, tend;
   gettimeofday(&tstart, NULL);
   // Assign each thread an ID and create all the threads.
-  int subsize = (int) (100000 / (nthreads-1));
+  int subsize = (int) (100000 / nthreads);
   for (i = 0; i < nthreads; i++) {
     thread_ids[i] = i;
     tdata[i].s = 3.14;
     tdata[i].start_index = i*subsize;
-    tdata[i].end_index = (i+1)*subsize % 100000;
+    tdata[i].end_index = (i+1)*subsize;
     tdata[i].array = data;
     pthread_create(&thread_array[i], NULL, scalar_multiply, &tdata[i]);
   }
@@ -282,13 +285,7 @@ int main(int argc, char **argv) {
 }
 ----
 
-4) Draw the stack diagram for the following program with four threads.
-
-[source]
-----
-----
-
-5) Ann-marie has the following errors when she tries to build. What type of error is it (compile, link, runtime, or logical)? How can she fix it?
+4) Ann-marie has the following errors when she tries to build. What type of error is it (compile, link, runtime, or logical)? How can she fix it?
 
 [source]
 ----
@@ -347,7 +344,7 @@ int main()
   double* double_ptr = (double *) generic;
   printf("test %f\n", *double_ptr); 
 
-  double* int_ptr = (int *) generic;
+  int* int_ptr = (int *) generic;
   printf("test %d\n", *int_ptr); 
 
   generic = &a;
@@ -355,7 +352,7 @@ int main()
   double* double_ptr = (double *) generic;
   printf("test %f\n", *double_ptr); 
 
-  double* int_ptr = (int *) generic;
+  int* int_ptr = (int *) generic;
   printf("test %d\n", *int_ptr); 
 
   return 0;
